--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       gap: 16px;
       overflow: hidden;
       margin-top: 0;
+      padding-bottom: 70px; /* Add padding to prevent content from being hidden behind bottom bar */
     }
     #today-view {
       display: flex;
@@ -192,6 +193,7 @@
       flex: 1;
       overflow-y: auto;
       padding: 0 8px;
+      padding-bottom: 80px; /* Add padding to prevent content from being hidden behind bottom bar */
       position: relative;
     }
     .selector-row {
@@ -296,9 +298,18 @@
     .bottom-bar {
       display: flex;
       justify-content: space-around;
-      padding: 10px 0;
+      padding: 10px 16px;
+      padding-bottom: max(10px, env(safe-area-inset-bottom, 10px));
+      gap: 12px;
       background: var(--card);
       border-top: 1px solid var(--border);
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 100;
+      box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
+      flex-shrink: 0;
     }
     .bottom-bar button {
       display: flex;
@@ -309,12 +320,15 @@
       background: var(--accent);
       color: white;
       border: none;
-      width: 48%;
-      padding: 10px;
+      flex: 1;
+      max-width: 48%;
+      padding: 12px;
       border-radius: 8px;
       font-size: 0.9rem;
       font-weight: 600;
       cursor: pointer;
+      min-height: 50px;
+      -webkit-tap-highlight-color: rgba(0,0,0,0.1);
     }
     .bottom-bar .share-btn { background: var(--success); }
     .bottom-bar button i { font-size: 1.1rem; }
@@ -813,9 +827,11 @@
       const months = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
       const progress = loadProgress();
       const year = new Date().getFullYear();
+      const currentMonth = new Date().getMonth();
       for (let month = 0; month < 12; month++) {
         const monthDiv = document.createElement('div');
         monthDiv.style.marginBottom = '16px';
+        monthDiv.id = `calendar-month-${month}`;
         const monthHeader = document.createElement('div');
         monthHeader.textContent = months[month];
         monthHeader.style.color = 'var(--accent)';
@@ -889,6 +905,25 @@
         monthDiv.appendChild(grid);
         container.appendChild(monthDiv);
       }
+      
+      // Scroll to current month after a short delay to ensure rendering is complete
+      setTimeout(() => {
+        const currentMonthElement = document.getElementById(`calendar-month-${currentMonth}`);
+        if (currentMonthElement) {
+          currentMonthElement.scrollIntoView({ 
+            behavior: 'smooth', 
+            block: 'start',
+            inline: 'nearest'
+          });
+          // Add a small offset from top for better visibility
+          const calendarView = document.getElementById('calendar-view');
+          if (calendarView) {
+            setTimeout(() => {
+              calendarView.scrollTop -= 20;
+            }, 300);
+          }
+        }
+      }, 100);
     }
     async function shareReadingsAsImage() {
       if (currentDayIndex === null) return;
