--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
       justify-content: space-between;
       padding: 12px 16px;
       background: var(--card);
-      box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       z-index: 100;
       position: sticky;
       top: 0;
       left: 0;
       right: 0;
+      border-bottom: 1px solid var(--border);
     }
     .title-bar h1 {
       font-size: 1.25rem;
@@ -80,29 +81,42 @@
       margin: 0 12px;
     }
     .nav-btn {
-      background: none;
-      border: none;
-      color: #6c757d;
+      background: var(--card);
+      border: 1px solid var(--border);
+      color: var(--text);
       font-size: 1.1rem;
-      width: auto;
-      height: auto;
-      padding: 8px 12px;
+      width: 40px;
+      height: 40px;
+      padding: 0;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 0;
+      border-radius: 8px;
       cursor: pointer;
       font-weight: 600;
-      transition: color 0.2s ease;
+      transition: all 0.2s ease;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      margin: 0 4px;
     }
     .nav-btn:hover {
+      background: var(--bg);
+      border-color: var(--accent);
       color: var(--accent);
-      opacity: 0.8;
+      transform: translateY(-1px);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+    .nav-btn:active {
+      transform: translateY(0);
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
     .dark-mode .nav-btn {
-      color: #aaa;
+      background: var(--card);
+      border-color: var(--border);
+      color: var(--text);
     }
     .dark-mode .nav-btn:hover {
+      background: var(--bg);
+      border-color: var(--accent);
       color: var(--accent);
     }
     .tabs {
